welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:1: error: type mismatch;
 found   : Unit
 required: Boolean
def lastDigit(a:Int, b:Int):Boolean = {if (a%10 == b%10) {return true}} 
                                       ^